compiler/testData/diagnostics/testsWithStdLib/annotations/jvmStatic/constructorProperty.kt
class A(<!JVM_STATIC_NOT_IN_OBJECT!>@JvmStatic val z: Int<!>) {

}